feat: comprehensive update of OJP, UI, and Infrastructure
This commit introduces a wide range of changes across the entire stack, including:

1.  **JDK Compatibility & Driver Refactoring**:
    *   Split `ojp-jdbc-driver` into JDK 11+ and JDK 8 compatible modules.
    *   Added `ojp-jdbc-driver-java8` module.
    *   Updated `pom.xml` to manage new modules.

2.  **UI Refactoring (OJP-UI)**:
    *   Major restructuring of the UI codebase.
    *   Removed legacy components: `AdminLayout`, `Header`, `Sidebar`, `menu.jsx`.
    *   Added `TableSyncStatus` and `ServicePortal` pages.
    *   Updated Vite proxy configurations for Prometheus, Loki, and Tempo.

3.  **Infrastructure & Docker**:
    *   Updated `docker-compose` files for optimized IP allocation and network config.
    *   Added configuration for `skywalking-ui`, `seatunnel`, and `signoz`.
    *   Updated Prometheus and Grafana datasources.

4.  **Server & Cache Logic**:
    *   Enhanced `CacheRuleController` and `SmartCacheInterceptor`.
    *   Implemented Oracle-compatible prepared statements emulator.
    *   Removed `RedisStreamEventHandler`.

5.  **Monitoring & CDC**:
    *   Updated CDC monitor event handling.
    *   Refactored `StreamConsumerService` and `TableSyncState`.
    *   Added SkyWalking UI source code.